objects/PL_Product_Group__c.object
<CustomObject>
    <fields>
        <fullName>Business_Pillar__c</fullName>
        <formula>PL_MD__r.Pillar__c</formula>
        <label>Business Pillar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COGS__c</fullName>
        <label>COGS</label>
        <summarizedField>PL_CAL__c.Percent__c</summarizedField>
        <summaryFilterItems>
            <field>PL_CAL__c.CA__c</field>
            <operation>equals</operation>
            <value>COGS</value>
        </summaryFilterItems>
        <summaryForeignKey>PL_CAL__c.Product_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>Start_Date__c &lt;= TODAY() &amp;&amp; (ISNULL(End_Date__c) || End_Date__c &gt;=Today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Cost__c</fullName>
        <label>Other Cost %</label>
        <summarizedField>PL_CAL__c.Percent__c</summarizedField>
        <summaryFilterItems>
            <field>PL_CAL__c.CA__c</field>
            <operation>notEqual</operation>
            <value>COGS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PL_CAL__c.Allocation_Type__c</field>
            <operation>equals</operation>
            <value>% of COST</value>
        </summaryFilterItems>
        <summaryForeignKey>PL_CAL__c.Product_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Net_Sales__c</fullName>
        <label>Other Net Sales %</label>
        <summarizedField>PL_CAL__c.Percent__c</summarizedField>
        <summaryFilterItems>
            <field>PL_CAL__c.CA__c</field>
            <operation>notEqual</operation>
            <value>COGS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PL_CAL__c.Allocation_Type__c</field>
            <operation>equals</operation>
            <value>% of NET SALES</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PL_CAL__c.L2I_Migration_External_Id__c</field>
            <operation>notEqual</operation>
            <value>PTS-CAL-DF-PTLM</value>
        </summaryFilterItems>
        <summaryForeignKey>PL_CAL__c.Product_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PL_MD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Data</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PL_MD__c.MD_Type__c</field>
                <operation>equals</operation>
                <value>Product Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PL_MD__c</referenceTo>
        <relationshipLabel>Product Groups</relationshipLabel>
        <relationshipName>Product_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>PL_MD__r.Product_Group__c</formula>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Product Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Pillar__c</columns>
        <columns>COGS__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Is_Active__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>Other_Cost__c</columns>
        <columns>Other_Net_Sales__c</columns>
        <columns>PL_MD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>